# legends-of-the-prompt

./: README.md  pyproject.toml
src/legends_of_the_prompt/: app.py
src/legends_of_the_prompt/messages/: action_progress.py
src/legends_of_the_prompt/ui/: clock.py  close_screen.py  create_game.py  delete_screen.py  game_screen.py  load_game.py  main_menu.py  main_window.py  menu_tab.py  woodcutting_tab.py
src/legends_of_the_prompt/ui/css/: close_screen.tcss  create_game.tcss  delete_screen.tcss  game_screen.tcss  load_game.tcss  main_menu.tcss  woodcutting_tab.tcss
src/legends_of_the_prompt/utils/: calculations.py  io.py
