[project]
name = "legends-of-the-prompt"
version = "0.0.0"
description = "CLI idle game where you train skills via command prompt"
authors = [
    {name = "Mason Munford",email = "masonmunford@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
commitizen = ">=4.11.0,<5.0.0"

[tool.commitizen]
version_provider = "pep621"